# vaannotate

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ADMINAPP_CONFIG_STREAMLINING_PLAN.md  ADMIN_RUNBOOK.md  ANNOTATOR_RUNBOOK.md  BUILDING_WINDOWS.md  PROJECT_WALKTHROUGH.md  QUICKSTART.txt  TROUBLESHOOTING.md  architecture.md  corpus_schema.md  labelsets.md  project_workflow.md  ui_requirements.md
scripts/: build_admin.ps1  build_client.ps1  new_toy_project.ps1  run_admin.ps1  run_client.ps1
tests/: README.md  test_active_learning_probe_jsonify.py  test_active_learning_recorder.py  test_admin_agreement.py  test_ai_adapters.py  test_ai_backend_config.py  test_ai_backend_corpus_cache.py  test_ai_backend_dummy_llm.py  test_ai_backend_queries.py  test_ai_engine_label_overlays.py  test_ai_log_progress.py  test_ai_prior_rounds.py  test_assisted_review_snippets.py  test_client_annotation_form.py  test_family_labeler_normalization.py  test_iter_with_bar_progress.py  test_jsonish.py  test_kobold_backend.py  test_label_dependencies.py  test_label_first_sampling.py  test_label_set_wizard_dialog.py  test_labelset_wizard_dialog.py  test_large_corpus_cli.py  test_large_corpus_jobs.py  test_llm_backends_json_retry.py  test_llm_reasoning.py  test_metadata.py  test_options_for_label.py  test_project_context.py  test_project_label_config.py  test_public_api.py  test_round_import.py
tools/: seed_toy_project.py
vaannotate/: __init__.py  admin_cli.py  annotator_cli.py  cli.py  corpus.py  metrics.py  project.py  rounds.py  schema.py  utils.py
(+64 files in other folders)
