[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vaannotate"
version = "0.1.0"
description = "Offline multi-annotator NLP gold standard toolkit"
authors = [
  {name = "VA Annotate"}
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vaannotate = "vaannotate.cli:main"

[tool.setuptools]
packages = ["vaannotate"]
